--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
     <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
-    
+    <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
 </tr>
 </table>
         </article>
