--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
     <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
+    <p><video src="https://vdept.bdstatic.com/746a5549464148787338486248426978/6252394345563147/865b30f569199564ef521a46b1e3690220f068e156411b637d99f65981605bfa7c43070c31dd0928a7d3108b143aa3f5.mp4?auth_key=1595012431-0-0-ed520aae72ef0010769043b4e67180ae" alt="a"></p>
 </tr>
 </table>
         </article>
