--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
     <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
-    <p><video src="https://apd-55f4ffbbfffde3d37da4c524be7f7f3d.v.smtcdns.com/om.tc.qq.com/Adixv51NFOWPTHc2XC4DdAqNRpq39ehKFQKoXfJwYxNk/uwMROfz2r57BIaQXGdGnC2deB3dUr_IkisDvBob9yrMGODlR/svp_50001/szg_87720880_50001_007d90b6e5074153b6e9a2804f1e382c.f622.mp4?sdtfrom=v1010&guid=d7faf25d3d84b6f2bb3626fba71d33df&vkey=4046ABFFCE203CC087CAFD753113FF379CDDB974AFDACBFD963E930FA794B441247F1C2887C3BC426B4DA7CB4DB1339440C1300B3DC90F483FCD8BEB2B7B31D42602AC3BB74E3987B527968575AD32C8311949CF14C56BC97FFCD69E8528306164313C6555DDC050B60528B8B3AB3FA5EDC072563709108B108177EA2ED366DF" controls="controls" width="100%" height="auto"></p>
+    <p><video src="https://cn-jxjj-dx-v-01.bilivideo.com/upgcxcode/56/53/208015356/208015356_nb2-1-30080.m4s?expires=1595037647&platform=pc&ssig=lTQ5gPYhjt8JTuk9q3UHlg&oi=3060078114&trid=346fbb3f2e324d339bd8316d870735f6u&nfc=1&nfb=maPYqpoel5MI3qOUX6YpRA==&cdnid=4261&mid=353901786&orderid=0,3&logo=80000000" controls="controls" width="100%" height="auto"></p>
 </tr>
 </table>
         </article>
