--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
     <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
-    <p><video src="https://cn-jxjj-dx-v-01.bilivideo.com/upgcxcode/56/53/208015356/208015356_nb2-1-30080.m4s?expires=1595037647&platform=pc&ssig=lTQ5gPYhjt8JTuk9q3UHlg&oi=3060078114&trid=346fbb3f2e324d339bd8316d870735f6u&nfc=1&nfb=maPYqpoel5MI3qOUX6YpRA==&cdnid=4261&mid=353901786&orderid=0,3&logo=80000000" controls="controls" width="100%" height="auto"></p>
+    <p><video src="http://qiniu.swarma.org/newUser.mp4" controls="controls" width="100%" height="auto"></p>
 </tr>
 </table>
         </article>
