--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title><p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg;v=4" width="24" height="24"></a> </p>丁华轩</title>
+  <title><p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="6" height="6"></a> </p>丁华轩</title>
   <meta name="description" content="">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -52,7 +52,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><img src="https://avatars2.githubusercontent.com/u/68307780?s=60&amp;v=4" width="48" height="48"></a> </p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a> </p>
 
 
       </div>
