--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a> 刘业欣</p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a></p>刘业欣
 
 
       </div>
