--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </div>
     <footer>
       <div class="owner">
-      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a></p>
-      <p><b>刘业欣</b></p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></p>
+      <p><b>刘业欣</p>
 
       </div>
       
