--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>丁华轩</title>
+  <title>瘤狗逆子刘业欣</title>
   <meta name="description" content="">
   <img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="6" height="6">
   <meta name="viewport" content="width=device-width,initial-scale=1">
