--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       <p><b>刘业欣</b></p>
-      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a><a 刘业欣肥照</a></p>
       
 
       </div>
