--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       
-      <p><a href="https://github.com/tt7-ssd-kyu7" class="avatar"><img src="https://avatars2.githubusercontent.com/u/68307780?s=60&amp;v=4" width="48" height="48"></a> <a href="https://github.com/tt7-ssd-kyu7">tt7-ssd-kyu7</a> maintains <a href="https://github.com/tt7-ssd-kyu7/unknown">Check</a></p>
+      <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a> <a href="https://github.com/tt7-ssd-kyu7">tt7-ssd-kyu7</a> maintains <a href="https://github.com/tt7-ssd-kyu7/unknown">Check</a></p>
 
       
 
