--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       
-      <p><a  class="avatar"><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a>刘狗墩肥照</p>
+      <p><a  class="avatar"><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
 
       
 
