--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="icon" href="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/img/pig.ico" sizes="32x32">
+  <link rel="icon" href="https://icweiliimg1.pstatp.com/weili/bl/240079755571101876.jpg" sizes="32x32">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>瘤狗逆子刘业欣</title>
+  <title>瘤狗逆子 王八巨墩刘业欣</title>
   <meta name="description" content="">
   <img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="6" height="6">
   <meta name="viewport" content="width=device-width,initial-scale=1">
