--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="icon" href="https://icweiliimg1.pstatp.com/weili/bl/240079755571101876.jpg" sizes="32x32">
+  <link rel="icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1595054303852&di=7102a43a69067edce94ec18bca946e3a&imgtype=0&src=http%3A%2F%2Fimg.mp.itc.cn%2Fupload%2F20170506%2F46bd0feda7ad4afa96b3a7843a3c8a84_th.jpeg" sizes="32x32">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
