--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="icon" href="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1595054303852&di=7102a43a69067edce94ec18bca946e3a&imgtype=0&src=http%3A%2F%2Fimg.mp.itc.cn%2Fupload%2F20170506%2F46bd0feda7ad4afa96b3a7843a3c8a84_th.jpeg" sizes="32x32">
+  <link rel="icon" href="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" sizes="32x32">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
@@ -41,9 +41,9 @@
 <a id="刘业欣" class="anchor" href="#%E5%88%98%E4%B8%9A%E6%AC%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>刘业欣</h1>
     <p><b>哈哈哈</b></p>
     <p><b>刘业欣是傻逼</b></p>
-    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
+    <p><img src="http://chuantu.xyz/t6/739/1595044471x992248267.png" alt="a"></p>
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
-    <p><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" alt="a"></p>
+    <p><img src="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
     <p><video src="http://qiniu.swarma.org/newUser.mp4" controls="controls" width="100%" height="auto"></p>
 </tr>
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       
-      <p><a  class="avatar"><img src="https://raw.githubusercontent.com/tt7-ssd-kyu7/text/master/2.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
+      <p><a  class="avatar"><img src="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
 
       
 
