--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="icon" href="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" sizes="32x32">
+  <link rel="icon" href="http://pic.027cgb.com/631300/2.jpg" sizes="32x32">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
@@ -41,9 +41,9 @@
 <a id="刘业欣" class="anchor" href="#%E5%88%98%E4%B8%9A%E6%AC%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>刘业欣</h1>
     <p><b>哈哈哈</b></p>
     <p><b>刘业欣是傻逼</b></p>
-    <p><img src="http://chuantu.xyz/t6/739/1595044471x992248267.png" alt="a"></p>
+    <p><img src="http://pic.027cgb.com/631300/7ED74065EDD212CA4C0794F89AF6934D.png" alt="a"></p>
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
-    <p><img src="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" alt="a"></p>
+    <p><img src="http://pic.027cgb.com/631300/2.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
     <p><video src="http://qiniu.swarma.org/newUser.mp4" controls="controls" width="100%" height="auto"></p>
 </tr>
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       
-      <p><a  class="avatar"><img src="http://chuantu.xyz/t6/739/1595044389x-1224475230.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
+      <p><a  class="avatar"><img src="http://pic.027cgb.com/631300/2.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
 
       
 
