--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <link rel="icon" href="https://sh-download-ipv6.ftn.qq.com/ftn_handler/fc518e4936dc81f8274baf112078382980d61d7fa67568e9128dbf72eb36d45fdb439a6e2d0f1c78c39a264ef27e57584d51fc301d30d3710a92261d36a8d44f/?fname=2.jpg&k=0965376232eecb9cf3aa27a61361064c04530057535057571e060255044c005605571a030505514e575707545407035652530606356434511d0f4705355c&code=3e7b5a4c&fr=00&&txf_fid=f7d044d2009c30b2418282c67cc1d2807328c42e&xffz=28921" sizes="32x32">
+  <link rel="icon" href="http://i1.fuimg.com/723574/574b201d921a1004.jpg" sizes="32x32">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
@@ -41,9 +41,9 @@
 <a id="刘业欣" class="anchor" href="#%E5%88%98%E4%B8%9A%E6%AC%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>刘业欣</h1>
     <p><b>哈哈哈</b></p>
     <p><b>刘业欣是傻逼</b></p>
-    <p><img src="https://sh-download-ipv6.ftn.qq.com/ftn_handler/f593fafa40e839aa3f6da814dbd2b6903703a30655bdfe10dbd12b3be24bbd4fbc08b06b7cb3edafa6d61c634faa3763d5a94ed9ce5243fabd3bb0b21d25a525/?fname=7ED74065EDD212CA4C0794F89AF6934D.png&k=6f313666dd4a989df6fe26a21637544d5252575f050752011b555053081a525100061b5e0255044f53540f00565351070102020030136655737501520001532772750457027427567501015f04715e5b7777005f0303224c465f51660d&code=616f07fb&fr=00&&txf_fid=6fd82a873e30d7e283d059d937cebf5746545b39&xffz=98835" alt="a"></p>
+    <p><img src="http://i1.fuimg.com/723574/edd212ca4c0794f8.jpg" alt="a"></p>
     <p><b>大肥大憨的瘤狗宠男--瓦坎达欣墩</b></p>
-    <p><img src="https://sh-download-ipv6.ftn.qq.com/ftn_handler/fc518e4936dc81f8274baf112078382980d61d7fa67568e9128dbf72eb36d45fdb439a6e2d0f1c78c39a264ef27e57584d51fc301d30d3710a92261d36a8d44f/?fname=2.jpg&k=0965376232eecb9cf3aa27a61361064c04530057535057571e060255044c005605571a030505514e575707545407035652530606356434511d0f4705355c&code=3e7b5a4c&fr=00&&txf_fid=f7d044d2009c30b2418282c67cc1d2807328c42e&xffz=28921" alt="a"></p>
+    <p><img src="http://i1.fuimg.com/723574/574b201d921a1004.jpg" alt="a"></p>
     <p><img src="https://steamuserimages-a.akamaihd.net/ugc/802117328497003805/8F916E0D51E9B559E44487C92213A08C82B88808/" alt="a"></p>
     <p><video src="http://qiniu.swarma.org/newUser.mp4" controls="controls" width="100%" height="auto"></p>
 </tr>
@@ -54,7 +54,7 @@
     <footer>
       <div class="owner">
       
-      <p><a  class="avatar"><img src="https://sh-download-ipv6.ftn.qq.com/ftn_handler/fc518e4936dc81f8274baf112078382980d61d7fa67568e9128dbf72eb36d45fdb439a6e2d0f1c78c39a264ef27e57584d51fc301d30d3710a92261d36a8d44f/?fname=2.jpg&k=0965376232eecb9cf3aa27a61361064c04530057535057571e060255044c005605571a030505514e575707545407035652530606356434511d0f4705355c&code=3e7b5a4c&fr=00&&txf_fid=f7d044d2009c30b2418282c67cc1d2807328c42e&xffz=28921" width="48" height="48"></a><a>刘狗墩肥照</a></p>
+      <p><a  class="avatar"><img src="http://i1.fuimg.com/723574/574b201d921a1004.jpg" width="48" height="48"></a><a>刘狗墩肥照</a></p>
 
       
 
